@@ -183,7 +183,8 @@ SpaceX-research=SpaceX research cost multiplier
 SpaceX-production=SpaceX production cost multiplier
 SpaceX-launch-multiplier=SpaceX component launch multiplier
 SpaceX-ignore-tech-multiplier=SpaceX ignore tech price multiplier
-SpaceX-no-space-sci=SpaceX remove space science from SpaceX technologies
+SpaceX-no-space-sci=Remove space science from SpaceX technologies
+SpaceX-no-nuclear=Replace nuclear with rocket fuel
 SpaceX-cheaper-fusion-reactor=SpaceX cheaper fusion reactor
 SpaceX-no-bob=No Bob's mods compatibility
 SpaceX-no-popup=Suppress Narrative Popups after first completion
@@ -198,6 +199,7 @@ SpaceX-production-cost=Production cost multiplier.
 SpaceX-launch-multiplier=Component launch multiplier. E.g. x10 means every component must be delivered 10 times more
 SpaceX-ignore-tech-multiplier=SpaceX tech prices are fixed and unaffected by changes to the vanilla game's technology price multiplier used for marathon games.  By default this multiplier is in addition to the SpaceX research cost multiplier, so check this to vary the costs independently (makes marathon SpaceX games easier).
 SpaceX-no-space-sci=By default the later SpaceX technologies requires Space Science.  Checking this setting will remove the space science requirement from the SpaceX technologies (makes game easier).
+SpaceX-no-nuclear=Replaces all nuclear fuel with rocket fuel in all SpaceX recipes. Also replaces the nuclear reactor with rocket fuel (makes game easier).
 SpaceX-cheaper-fusion-reactor=The recipe cost of the fusion reactor component is reduced to 40 portable fusion reactors.  This makes them cost 10k processing units (same as in v0.14) rather than 25k processing units that is the standard v0.15 cost (makes game easier).
 SpaceX-no-bob=Bob's mods compatibility will not be used in this playthrough
 SpaceX-no-popup=If selected then the narrative popups for the stage completion will be suppressed. (Good for games where you want to launch many FTL craft)
